--- a/devenv/Vagrantfile
+++ b/devenv/Vagrantfile
@@ -34,6 +34,7 @@ Vagrant.configure('2') do |config|
   config.vm.box = "hyperledger/fabric-baseimage"
   config.vm.box_version = ENV['USE_LOCAL_BASEIMAGE'] ? "0": baseimage_release # Vagrant does not support versioning local images, the local version is always implicitly version 0
 
+  config.vm.network :forwarded_port, guest: 3000, host: 8080 # Openchain REST services
   config.vm.network :forwarded_port, guest: 7050, host: 7050 # Openchain REST services
   config.vm.network :forwarded_port, guest: 7051, host: 7051 # Openchain gRPC services
   config.vm.network :forwarded_port, guest: 7054, host: 7054 # Membership service
@@ -42,7 +43,8 @@ Vagrant.configure('2') do |config|
   config.vm.synced_folder "..", "#{SRCMOUNT}"
   config.vm.synced_folder "..", "/opt/gopath/src/github.com/hyperledger/fabric"
   config.vm.synced_folder ENV.fetch('LOCALDEVDIR', ".."), "#{LOCALDEV}"
-
+  config.vm.synced_folder "../../../../gitlabhost.ibm.com/FTM-Integration", "/opt/gopath/src/gitlabhost.ibm.com/app" # Map application source from host
+  
   config.vm.provider :virtualbox do |vb|
     vb.name = "hyperledger"
     vb.customize ['modifyvm', :id, '--memory', '4096']
